--- a/FrontEnd/WEBSchool/CSS/estilos.css
+++ b/FrontEnd/WEBSchool/CSS/estilos.css
@@ -42,6 +42,7 @@ header h1{
     margin-top: 7px;
     background: none;
     line-height: 101px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .btn_header {
@@ -54,6 +55,7 @@ header h1{
     border-color: #00B2FF;
     color: white;
     font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .Img_Header img{
@@ -62,7 +64,7 @@ header h1{
 }
 
 /*------------Fin Estilos Header-----------------------------*/
-
+/*------------Inicio Estilos Container cards-----------------*/
 .container_card{
     width: 100%;
     height: 600px;
@@ -80,6 +82,12 @@ header h1{
     border-radius: 8px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
 }
+.cards p {
+    font-family: Arial, Helvetica, sans-serif;
+}
+.cards h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .cards_medio{
     height: 500px;
@@ -87,6 +95,13 @@ header h1{
     margin: 50px;
     border-radius: 8px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+}
+.cards_medio p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.cards_medio h2{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .cards_medio img{
@@ -99,4 +114,30 @@ header h1{
     height: 290px;
     width: 100%;
     border-radius: 8px;
+}
+
+/*------------Fin Estilos Container cards-----------------*/
+/*------------Inicio Estilos Formulario  -----------------*/
+
+.container_Formulario{
+    width: 100%;
+    height: 650px;
+    padding-top: 40px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background: #5FFCAD;
+}
+
+.container_Formulario h1{
+    background: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.Formulario{
+    width: 85%;
+    height: 500px;
+    border-radius: 5px;
+    background: white;
 }
